--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
                             <div class="carousel-cell" style="height: 100px"><h2>Disney</h2></div>
                             <div class="carousel-cell" style="height: 100px"><h2>ESPN</h2></div>
                             <div class="carousel-cell" style="height: 100px"><h2>Spiriva Respimat</h2></div>
+                            <div class="carousel-cell" style="height: 100px"><h2>Flavortown</h2></div>
                             <div class="carousel-cell" style="height: 100px"><h2>Dunkin'</h2></div>
                             <div class="carousel-cell" style="height: 100px"><h2>Hilton</h2></div>
                             <div class="carousel-cell" style="height: 100px"><h2>Bowflex</h2></div>
@@ -181,38 +182,58 @@
                     </div>
                     <div class="row mx-auto text-center mt-2 mb-3" style="max-width: 600px; min-width: 350px;">
                         <div class="commercial-carousel-2 mx-auto text-center" style="padding: 0;">
+                            <div class="carousel-cell video-wrap mx-auto"> <!-- arbella -->
+                                <iframe style="border: 5px solid white;" src="https://www.youtube.com/embed/eelzeDinGZ8?si=C95aLJaSlveElzDX" title="Arbella" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                                <div class="video-wrap__grippy"></div>
+                                <div class="video-wrap__grippy"></div>
+                            </div>
+                            <div class="carousel-cell video-wrap mx-auto"> <!-- flavortown -->
+                                <iframe style="border: 5px solid white;" src="https://www.youtube.com/embed/mgD93BHLc9Y?si=Kci5uLNqhs3N-eTq" title="Flavortown" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                                <div class="video-wrap__grippy"></div>
+                                <div class="video-wrap__grippy"></div>
+                            </div>
+                            <div class="carousel-cell video-wrap mx-auto"> <!-- wren kitchens -->
+                                <iframe style="border: 5px solid white;" src="https://www.youtube.com/embed/l2JcrqVvO74?si=_z3kqVEnxN0v9Paz" title="Wren Kitchens" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                                <div class="video-wrap__grippy"></div>
+                                <div class="video-wrap__grippy"></div>
+                            </div>
                             <div class="carousel-cell video-wrap mx-auto"> <!-- xifaxan -->
-                                <iframe style="border: 6px solid white;" src="https://www.youtube.com/embed/fzyl25vOdBw?si=EDiID94qdKZ3CCtn" title="Xifaxan" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                                <iframe style="border: 5px solid white;" src="https://www.youtube.com/embed/fzyl25vOdBw?si=EDiID94qdKZ3CCtn" title="Xifaxan" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                                <div class="video-wrap__grippy"></div>
+                                <div class="video-wrap__grippy"></div>
+                            </div>
+                            <div class="carousel-cell video-wrap mx-auto"> <!-- delta safety video -->
+                                <iframe style="border: 5px solid white;" src="https://www.youtube.com/embed/TFBfPR342-M?si=sJJPpJ4DDzRm6JZI" title="Delta" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                                 <div class="video-wrap__grippy"></div>
                                 <div class="video-wrap__grippy"></div>
                             </div>
                             <div class="carousel-cell video-wrap mx-auto"> <!-- match.com -->
-                                <iframe style="border: 6px solid white;" src="https://www.youtube.com/embed/OWrb9HXVfec?si=aotcKUUQu27N06wu" title="Match.com" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                                <iframe style="border: 5px solid white;" src="https://www.youtube.com/embed/OWrb9HXVfec?si=aotcKUUQu27N06wu" title="Match.com" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                                 <div class="video-wrap__grippy"></div>
                                 <div class="video-wrap__grippy"></div>
                             </div>
                             <div class="carousel-cell video-wrap mx-auto"> <!-- sling tv #2 - rece davis -->
-                                <iframe style="border: 6px solid white;" src="https://www.youtube.com/embed/R965TG7lN5Y?si=6xWo1qiGVxlwMZMd" title="Sling TV / ESPN" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                                <iframe style="border: 5px solid white;" src="https://www.youtube.com/embed/R965TG7lN5Y?si=6xWo1qiGVxlwMZMd" title="Sling TV / ESPN" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                                 <div class="video-wrap__grippy"></div>
                                 <div class="video-wrap__grippy"></div>
                             </div>
                             <div class="carousel-cell video-wrap mx-auto"> <!-- zicam #2 -->
-                                <iframe style="border: 6px solid white;" src="https://www.youtube.com/embed/ptQJ3ir_8FM?si=s_hISnlJJ7Amb5D5" title="Zicam" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                                <iframe style="border: 5px solid white;" src="https://www.youtube.com/embed/ptQJ3ir_8FM?si=s_hISnlJJ7Amb5D5" title="Zicam" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                                 <div class="video-wrap__grippy"></div>
                                 <div class="video-wrap__grippy"></div>
                             </div>
                             <div class="carousel-cell video-wrap mx-auto"> <!-- bowflex -->
-                                <iframe style="border: 6px solid white;" src="https://www.youtube.com/embed/9pssErweKpQ?si=E45SRC3z9BCuWavZ" title="Bowflex" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                                <iframe style="border: 5px solid white;" src="https://www.youtube.com/embed/9pssErweKpQ?si=E45SRC3z9BCuWavZ" title="Bowflex" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                                 <div class="video-wrap__grippy"></div>
                                 <div class="video-wrap__grippy"></div>
                             </div>
                             <div class="carousel-cell video-wrap mx-auto"> <!-- disney -->
-                                <iframe style="border: 6px solid white;" src="https://www.youtube.com/embed/lSSk1BceNzw?si=yWbFEfk6eKez5eaa" title="Disney" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                                <iframe style="border: 5px solid white;" src="https://www.youtube.com/embed/lSSk1BceNzw?si=yWbFEfk6eKez5eaa" title="Disney" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                                 <div class="video-wrap__grippy"></div>
                                 <div class="video-wrap__grippy"></div>
                             </div>
                             <div class="carousel-cell video-wrap mx-auto"> <!-- amex / venus -->
-                                <iframe style="border: 6px solid white;" src="https://www.youtube.com/embed/MxqiFbVgCr8?si=VZmc5CVPIw1BiXQw" title="American Express" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                                <iframe style="border: 5px solid white;" src="https://www.youtube.com/embed/MxqiFbVgCr8?si=VZmc5CVPIw1BiXQw" title="American Express" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                                 <div class="video-wrap__grippy"></div>
                                 <div class="video-wrap__grippy"></div>
                             </div>
@@ -234,6 +255,7 @@
                             <div class="carousel-cell" style="height: 100px"><h2>Angie's List</h2></div>
                             <div class="carousel-cell" style="height: 100px"><h2>Nick Jr.</h2></div>
                             <div class="carousel-cell" style="height: 100px"><h2>Microsoft</h2></div>
+                            <div class="carousel-cell" style="height: 100px"><h2>Arebella</h2></div>
                             <div class="carousel-cell" style="height: 100px"><h2>GoDaddy</h2></div>
                             <div class="carousel-cell" style="height: 100px"><h2>Hood Ice Cream</h2></div>
                             <div class="carousel-cell" style="height: 100px"><h2>Food Network</h2></div>
@@ -265,13 +287,18 @@
                     <div class="col-12 col-md-6 mx-auto">
                         <div class="resume-carousel-1 mx-auto" style="max-width: 320px;">
                             <div class="carousel-cell">
-                                <a class="carousel-cell-image" href="images/resume/abby_church_resume.png" data-lightbox="resumes" data-title="Resume">
-                                    <img class="rounded" style="height: 80%" data-flickity-lazyload-src="images/resume/abby_church_resume.png">
+                                <a class="carousel-cell-image" href="images/resume/abbychurch_resume_theatrical_2026.png" data-lightbox="resumes" data-title="Resume (Theatrical)">
+                                    <img class="rounded" style="height: 80%" data-flickity-lazyload-src="images/resume/abbychurch_resume_theatrical_2026.png">
                                 </a>
                             </div>
                             <div class="carousel-cell">
-                                <a class="carousel-cell-image" href="images/resume/abby_church_resume_commercial.png" data-lightbox="resumes" data-title="Resume (Commercial)">
-                                    <img class="rounded" style="height: 80%" data-flickity-lazyload-src="images/resume/abby_church_resume_commercial.png">
+                                <a class="carousel-cell-image" href="images/resume/abbychurch_resume_commercial_2026.png" data-lightbox="resumes" data-title="Resume (Commercial)">
+                                    <img class="rounded" style="height: 80%" data-flickity-lazyload-src="images/resume/abbychurch_resume_commercial_2026.png">
+                                </a>
+                            </div>
+                            <div class="carousel-cell">
+                                <a class="carousel-cell-image" href="images/resume/abbychurch_resume_print_vo_2026.png" data-lightbox="resumes" data-title="Resume (Print & VO)">
+                                    <img class="rounded" style="height: 80%" data-flickity-lazyload-src="images/resume/abbychurch_resume_print_vo_2026.png">
                                 </a>
                             </div>
                         </div>
@@ -279,23 +306,23 @@
                     <div class="col-12 col-md-6">
                         <div class="resume-carousel-2 mx-auto" style="max-width: 350px;">
                             <div class="carousel-cell">
-                                <a class="carousel-cell-image" href="images/resume/p_green.jpg" data-lightbox="headshots" data-title="Photo: Emily Lambert Photography">
-                                    <img style="height: 90%" data-flickity-lazyload-src="images/resume/p_green.jpg">
+                                <a class="carousel-cell-image" href="images/resume/AbbyChurch1.jpg" data-lightbox="headshots" data-title="Photo: YellowBelly Photo">
+                                    <img style="height: 90%" data-flickity-lazyload-src="images/resume/AbbyChurch1.jpg">
                                 </a>
                             </div>
                             <div class="carousel-cell">
-                                <a class="carousel-cell-image" href="images/resume/p_pink.jpg" data-lightbox="headshots" data-title="Photo: Emily Lambert Photography">
-                                    <img style="height: 90%" data-flickity-lazyload-src="images/resume/p_pink.jpg">
+                                <a class="carousel-cell-image" href="images/resume/AbbyChurch2.jpg" data-lightbox="headshots" data-title="Photo: YellowBelly Photo">
+                                    <img style="height: 90%" data-flickity-lazyload-src="images/resume/AbbyChurch2.jpg">
                                 </a>
                             </div>
                             <div class="carousel-cell">
-                                <a class="carousel-cell-image" href="images/resume/p_blue.jpg" data-lightbox="headshots" data-title="Photo: Emily Lambert Photography">
-                                    <img style="height: 90%" data-flickity-lazyload-src="images/resume/p_blue.jpg">
+                                <a class="carousel-cell-image" href="images/resume/AbbyChurch3.jpg" data-lightbox="headshots" data-title="Photo: YellowBelly Photo">
+                                    <img style="height: 90%" data-flickity-lazyload-src="images/resume/AbbyChurch3.jpg">
                                 </a>
                             </div>
                             <div class="carousel-cell">
-                                <a class="carousel-cell-image" href="images/resume/l_pink.jpg" data-lightbox="headshots" data-title="Photo: Emily Lambert Photography">
-                                    <img style="width: 100%" data-flickity-lazyload-src="images/resume/l_pink.jpg">
+                                <a class="carousel-cell-image" href="images/resume/AbbyChurch4.jpg" data-lightbox="headshots" data-title="Photo: YellowBelly Photo">
+                                    <img style="width: 100%" data-flickity-lazyload-src="images/resume/AbbyChurch4.jpg">
                                 </a>
                             </div>
                         </div>
