--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                             <div class="carousel-cell" style="height: 100px"><h2>Angie's List</h2></div>
                             <div class="carousel-cell" style="height: 100px"><h2>Nick Jr.</h2></div>
                             <div class="carousel-cell" style="height: 100px"><h2>Microsoft</h2></div>
-                            <div class="carousel-cell" style="height: 100px"><h2>Arebella</h2></div>
+                            <div class="carousel-cell" style="height: 100px"><h2>Arbella</h2></div>
                             <div class="carousel-cell" style="height: 100px"><h2>GoDaddy</h2></div>
                             <div class="carousel-cell" style="height: 100px"><h2>Hood Ice Cream</h2></div>
                             <div class="carousel-cell" style="height: 100px"><h2>Food Network</h2></div>
